trunk/Archive2/37/c9f868fcb2b386/output
main.cpp:3:1: error: ‘http’ does not name a type
 http://coliru.stacked-crooked.com/a/168eaaf50a224cf8
 ^
main.cpp:8:2: warning: extra ‘;’ [-Wpedantic]
 };
  ^
main.cpp:9:6: error: ‘Base’ has not been declared
 void Base::show()
      ^
main.cpp:14:1: error: expected class-name before ‘{’ token
 {
 ^
main.cpp: In member function ‘void Derived::show()’:
main.cpp:18:13: error: ‘Base’ has not been declared
             Base::show();//you forgot to add this line
             ^
main.cpp: In function ‘int main()’:
main.cpp:24:5: error: ‘Base’ was not declared in this scope
     Base *b;
     ^
main.cpp:24:11: error: ‘b’ was not declared in this scope
     Base *b;
           ^
